--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@ body
 	width: 100%;
 }
 
+:root
+{
+	--section-color-blue:#2B57A4;
+}
 
 /*Body Header*/
 
@@ -239,7 +243,7 @@ section.row-align div
 
 .mb-blue
 {
-	background-color: #2B57A4;
+	background-color: var(--section-color-blue);
 }
 .mb-orange
 {
@@ -487,7 +491,7 @@ section.row-align div
 }
 .timeline-box h2
 {
-	color:#2B57A4;
+	color:var(--section-color-blue);
 	margin-bottom: -4%;
 	
 }
@@ -503,7 +507,7 @@ section.row-align div
 	background-repeat: no-repeat;
 }*/
 /* {
-	color:#2B57A4;
+	color:var(--section-color-blue;
 	margin-bottom: -4%;
 	
 } */
